style: start styling nav btn

--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -19,3 +19,19 @@
 .nav-link {
     margin: 1.2rem;
 }
+
+.nav-btn {
+    background: black;
+    color: white;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    border-radius: 20px;
+}
+
+.nav-btn-icon {
+    margin-right: 8px;
+}
