--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,3 +47,18 @@ p {
   line-height: 1.2;
   margin-bottom: 1rem;
 }
+
+@media screen and (max-width: 840px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  h3 {
+    font-size: 1.25rem;
+  }
+  p {
+    font-size: 0.875rem;
+  }
+}
