--- a/components/Skills/Skills.module.css
+++ b/components/Skills/Skills.module.css
@@ -1,7 +1,37 @@
 #skills {
+  overflow: hidden;
+  width: 100vw;
+  max-width: 50rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 50px 0;
+  margin: 0 auto;
+  padding: 60px 0;
+}
+
+.skills-title {
+  margin-bottom: 20px;
+}
+
+.skills-container {
+  margin: 1.5rem;
+  width: 100vw;
+  max-width: 80%;
+  text-align: left;
+}
+
+.skill-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem;
+  padding: 1.5rem 2rem;
+  border-radius: 8px;
+  background: #dbdbdb;
+}
+
+.skill-image {
+  object-fit: cover;
+  margin-right: 2rem;
 }
