--- a/components/Skills/Skills.module.css
+++ b/components/Skills/Skills.module.css
@@ -28,7 +28,7 @@
   margin: 1rem;
   padding: 1.5rem 2rem;
   border-radius: 8px;
-  background: #dbdbdb;
+  box-shadow: 0px 4px 4px 4px lightgrey;
 }
 
 .skill-image {
