--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -1,13 +1,16 @@
 .navbar {
   height: 5rem;
   width: 100vw;
+  max-width: 75rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
   padding: 1rem 2rem;
   position: sticky;
+  top: 0;
   z-index: 3;
+  background-color: #f5f5f5;
 }
 
 .logo {
