style: add pewter CSS var, change btn text color

--- a/components/shared/Button/Button.module.css
+++ b/components/shared/Button/Button.module.css
@@ -1,6 +1,6 @@
 .btn {
   background: black;
-  color: white;
+  color: var(--color-base-pewter);
   padding: 0.5rem 1rem;
   cursor: pointer;
   display: flex;
