--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -10,7 +10,7 @@
   position: sticky;
   top: 0;
   z-index: 3;
-  background-color: #e9eaec;
+  background-color: var(--color-base-pewter);
 }
 
 .logo {
