style: add styles to project title

--- a/components/Portfolio/Portfolio.module.css
+++ b/components/Portfolio/Portfolio.module.css
@@ -13,6 +13,11 @@
   overflow: hidden;
 }
 
+.project-title {
+  text-align: center;
+  margin-top: 20px;
+}
+
 .slide-direction {
   display: flex;
   justify-content: space-between;
