feat: add project description and style

--- a/components/Portfolio/Portfolio.module.css
+++ b/components/Portfolio/Portfolio.module.css
@@ -32,6 +32,12 @@
   margin-top: 20px;
 }
 
+.project-description {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
 .indicator {
   margin-top: 20px;
   display: flex;
