--- a/components/Portfolio/Portfolio.module.css
+++ b/components/Portfolio/Portfolio.module.css
@@ -32,6 +32,18 @@
   object-fit: cover;
 }
 
+.client-logo-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+}
+
+.client-logo {
+  object-fit: contain;
+}
+
 .left {
   margin-right: 28px;
 }
@@ -47,7 +59,6 @@
 
 .project-description {
   text-align: center;
-  margin-top: 20px;
   margin-bottom: 40px;
 }
 
