--- a/components/Skills/Skills.module.css
+++ b/components/Skills/Skills.module.css
@@ -19,6 +19,10 @@
   width: 100vw;
   max-width: 80%;
   text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .skill-card {
