--- a/components/shared/Card/Card.module.css
+++ b/components/shared/Card/Card.module.css
@@ -6,6 +6,8 @@
   padding: 1.5rem 2rem;
   border-radius: 8px;
   box-shadow: 0px 4px 4px 4px lightgrey;
+  width: 600px;
+  height: 200px;
 }
 
 .card-image {
