--- a/components/shared/Card/Card.module.css
+++ b/components/shared/Card/Card.module.css
@@ -1,16 +1,21 @@
 .card {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   margin: 1rem;
   padding: 1.5rem 2rem;
   border-radius: 8px;
   box-shadow: 0px 4px 4px 4px lightgrey;
   width: 600px;
-  height: 200px;
+  height: 400px;
 }
 
 .card-image {
-  object-fit: cover;
-  margin-right: 2rem;
+  object-fit: contain;
+}
+
+.card-content {
+  text-align: center;
+  max-width: 400px;
 }
