--- a/components/shared/Card/Card.module.css
+++ b/components/shared/Card/Card.module.css
@@ -2,13 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin: 1rem;
   padding: 1.5rem 2rem;
   border-radius: 8px;
   box-shadow: 0px 4px 4px 4px lightgrey;
   width: 600px;
-  height: 400px;
+  height: 360px;
+}
+
+.card-image-wrapper {
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  height: 180px;
 }
 
 .card-image {
@@ -17,10 +24,11 @@
 
 .card-content {
   text-align: center;
-  max-width: 400px;
+  max-width: 480px;
 }
 
 .card-cta {
   display: flex;
   justify-content: center;
+  margin-top: 1.5rem;
 }
