--- a/components/Skills/Skills.module.css
+++ b/components/Skills/Skills.module.css
@@ -22,3 +22,18 @@
   align-items: center;
   justify-content: center;
 }
+
+.skill-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  margin: 1.5rem;
+  padding: 1.5rem 2rem;
+  border: 1px solid lightgrey;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px lightgrey;
+  width: 600px;
+  height: 500px;
+}
