--- a/components/Skills/Skills.module.css
+++ b/components/Skills/Skills.module.css
@@ -1,7 +1,8 @@
 #skills {
+  background-color: var(--color-primary);
   overflow: hidden;
   width: 100vw;
-  max-width: 50rem;
+  /* max-width: 50rem; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,29 +12,31 @@
 }
 
 .skills-title {
+  color: var(--color-base-pewter);
   margin-bottom: 20px;
 }
 
 .skills-container {
   margin: 1.5rem;
   width: 100vw;
-  max-width: 80%;
+  max-width: 50rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .skill-section {
+  background-color: var(--color-base-pewter);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
   text-align: center;
-  margin: 1.5rem;
+  /* margin: 1rem; */
   padding: 1.5rem 2rem;
   border: 1px solid lightgrey;
-  border-radius: 8px;
-  box-shadow: 0px 2px 4px lightgrey;
+  border-radius: 2px;
+  /* box-shadow: 0px 2px 4px lightgrey; */
   width: 600px;
   height: 500px;
 }
