--- a/components/Skills/Skills.module.css
+++ b/components/Skills/Skills.module.css
@@ -32,10 +32,10 @@
   align-items: center;
   justify-content: space-evenly;
   text-align: center;
-  /* margin: 1rem; */
+  margin: 1rem;
   padding: 1.5rem 2rem;
   border: 1px solid lightgrey;
-  border-radius: 2px;
+  border-radius: 4px;
   /* box-shadow: 0px 2px 4px lightgrey; */
   width: 600px;
   height: 500px;
