--- a/components/shared/Card/Card.module.css
+++ b/components/shared/Card/Card.module.css
@@ -7,8 +7,8 @@
   margin: 1rem;
   padding: 1.5rem 2rem;
   border: 1px solid lightgrey;
-  border-radius: 8px;
-  box-shadow: 0px 2px 4px lightgrey;
+  border-radius: 4px;
+  /* box-shadow: 0px 2px 4px lightgrey; */
   width: 600px;
   height: 360px;
 }
