--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -24,6 +24,7 @@
   border: 1px solid var(--color-base-pewter);
   border-radius: 4px;
   padding: 10px;
+  font-family: var(--font-dm-sans), "Roboto", sans-serif;
 }
 
 .contact-form-field:active {
