--- a/components/shared/Button/Button.module.css
+++ b/components/shared/Button/Button.module.css
@@ -8,7 +8,7 @@
   justify-content: center;
   border: none;
   border-radius: 4px;
-  font-family: var(--font-dm-sans);
+  font-family: var(--font-dm-sans), "Roboto", sans-serif;
 }
 
 .btn-icon {
