--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -47,3 +47,10 @@
   border: 1px solid var(--color-base-black);
   cursor: pointer;
 }
+
+.submit:disabled {
+  background-color: var(--color-base-pewter);
+  color: var(--color-primary);
+  border: 1px solid var(--color-primary);
+  cursor: default;
+}
