--- a/components/shared/Dialog/Dialog.module.css
+++ b/components/shared/Dialog/Dialog.module.css
@@ -24,21 +24,22 @@
 .dialog-title {
   font-size: 1.5rem;
   font-weight: bold;
-  margin-bottom: 10px;
+  text-align: center;
 }
 
 .dialog-content {
   font-size: 1.2rem;
   line-height: 1.5;
-  margin-bottom: 20px;
+  margin: 30px 0px;
+  text-align: center;
 }
 
 .dialog-buttons {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
-.dialog-button {
+/* .dialog-button {
   background-color: #007bff;
   color: #fff;
   border: none;
@@ -50,4 +51,4 @@
 
 .dialog-button:hover {
   background-color: #0069d9;
-}
+} */
