--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -38,6 +38,7 @@
   width: 1.5rem;
   height: 1.5rem;
   color: var(--color-primary);
+  transition: color 0.2s ease-out;
 }
 
 .social-icon:hover {
