--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -19,9 +19,9 @@
 
 .logo {
   object-fit: cover;
-  width: 3rem;
-  height: 3rem;
-  margin: 0 20px;
+  width: 5rem;
+  height: 4rem;
+  margin: 0 1rem;
 }
 
 .nav-link {
