--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -12,11 +12,6 @@
   background-color: var(--color-base-pewter);
 }
 
-.nav-links-wrapper {
-  display: flex;
-  align-items: center;
-}
-
 .logo {
   object-fit: cover;
   width: 5rem;
@@ -24,11 +19,18 @@
   margin: 0 1rem;
 }
 
+.nav-links {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .nav-link {
   margin: 1.2rem;
 }
 
-.social-icons-wrapper {
+.cta-wrapper {
   display: flex;
   align-items: center;
 }
@@ -43,4 +45,40 @@
 
 .social-icon:hover {
   color: var(--color-base-black);
+}
+
+.hamburger {
+  display: none;
+}
+
+@media screen and (max-width: 780px) {
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .nav-links {
+    position: absolute;
+    flex-direction: column;
+    gap: 0;
+    top: 70px;
+    right: -100%;
+    text-align: start;
+    width: 50%;
+    transition: 0.3s ease-in-out;
+    background-color: aliceblue;
+    padding: 10px;
+  }
+
+  .nav-links.active {
+    right: 0;
+  }
+
+  .nav-links li {
+    margin: 16px 0;
+  }
+
+  .cta-wrapper {
+    display: none;
+  }
 }
