style: finish responsive nav v1

--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -20,19 +20,20 @@
 }
 
 .nav-links {
-  list-style: none;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.nav-link {
-  margin: 1.2rem;
+.nav-links ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
 }
 
-.cta-wrapper {
-  display: flex;
-  align-items: center;
+.nav-link {
+  margin: 1.2rem;
 }
 
 .social-icon {
@@ -60,25 +61,31 @@
   .nav-links {
     position: absolute;
     flex-direction: column;
-    gap: 0;
+    align-items: center;
+    gap: 0.5rem;
     top: 70px;
-    right: -100%;
-    text-align: start;
-    width: 50%;
-    transition: 0.3s ease-in-out;
-    background-color: aliceblue;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    transition: 0.2s ease-in-out;
+    background-color: var(--color-base-pewter);
     padding: 10px;
+    opacity: 0%;
   }
 
   .nav-links.active {
-    right: 0;
+    opacity: 100%;
+  }
+
+  .nav-links ul {
+    flex-direction: column;
   }
 
   .nav-links li {
     margin: 16px 0;
   }
 
-  .cta-wrapper {
-    display: none;
+  .social-icon-wrapper {
+    margin: 16px 0;
   }
 }
