--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -70,11 +70,13 @@
     transition: 0.2s ease-in-out;
     background-color: var(--color-base-pewter);
     padding: 10px;
-    opacity: 0%;
+    opacity: 0;
+    pointer-events: none;
   }
 
   .nav-links.active {
-    opacity: 100%;
+    opacity: 1;
+    pointer-events: all;
   }
 
   .nav-links ul {
