style: adjust p max width and p a font size

--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -8,7 +8,6 @@
 
 .about-content {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -18,4 +17,5 @@
 
 .about-paragraph {
   padding: 0 40px;
+  max-width: 40rem;
 }
