--- a/components/Skills/Skills.module.css
+++ b/components/Skills/Skills.module.css
@@ -44,3 +44,13 @@
 .skills-subheading {
   color: var(--color-primary);
 }
+
+@media screen and (max-width: 768px) {
+  .skills-container {
+    flex-direction: column;
+  }
+  .skill-section {
+    width: 300px;
+    height: 400px;
+  }
+}
