--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,13 @@ h3 {
   margin-bottom: 1rem;
 }
 
+h4 {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.2;
+  margin-bottom: 0.5rem;
+}
+
 p {
   font-size: 1rem;
   font-weight: 400;
@@ -66,7 +73,7 @@ a:hover {
   color: var(--color-base-black);
 }
 
-@media screen and (max-width: 840px) {
+@media screen and (max-width: 768px) {
   h1 {
     font-size: 2rem;
   }
@@ -75,6 +82,9 @@ a:hover {
   }
   h3 {
     font-size: 1.25rem;
+  }
+  h4 {
+    font-size: 0.875rem;
   }
   p {
     font-size: 0.875rem;
