--- a/components/Testimonials/Testimonials.module.css
+++ b/components/Testimonials/Testimonials.module.css
@@ -6,10 +6,10 @@
   justify-content: center;
 }
 
-.testimonial-container {
+/* .testimonial-container {
   padding: 20px 0;
   width: 800px;
-}
+} */
 
 .testimonial-blockquote {
   text-align: center;
