--- a/components/shared/Card/Card.module.css
+++ b/components/shared/Card/Card.module.css
@@ -34,3 +34,21 @@
   justify-content: center;
   margin-top: 1.5rem;
 }
+
+@media screen and (max-width: 768px) {
+  .card {
+    width: 300px;
+    height: 360px;
+  }
+  .card-image-wrapper {
+    width: 120px;
+    height: 120px;
+  }
+  .card-image {
+    width: 120px;
+    height: 120px;
+  }
+  .card-content {
+    max-width: 240px;
+  }
+}
