--- a/components/Testimonials/Testimonials.module.css
+++ b/components/Testimonials/Testimonials.module.css
@@ -36,3 +36,15 @@
   font-style: normal;
   margin: 1rem;
 }
+
+@media screen and (max-width: 768px) {
+  .testimonial-quote {
+    font-size: 1.2rem;
+  }
+  .testimonial-author {
+    font-size: 1rem;
+  }
+  .author-title {
+    font-size: 0.8rem;
+  }
+}
