--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -60,3 +60,9 @@
   border: 1px solid var(--color-primary);
   cursor: default;
 }
+
+@media screen and (max-width: 768px) {
+  .contact-form-wrapper {
+    width: 20rem;
+  }
+}
