--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 50px 0;
+  margin: 0 auto;
+  height: 100vh;
 }
 
 .about-content {
