--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   margin: 0 auto;
   padding: 1rem 2rem;
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   z-index: 3;
   background-color: var(--color-base-pewter);
