--- a/components/Testimonials/Testimonials.module.css
+++ b/components/Testimonials/Testimonials.module.css
@@ -1,9 +1,10 @@
-#testimonials {
+#testimonials-section {
   padding: 80px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 }
 
 /* .testimonial-container {
