--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -9,7 +9,7 @@
 
 .about-content {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   text-align: center;
   max-width: 60rem;
@@ -18,6 +18,14 @@
 
 .about-paragraph {
   padding: 0 40px;
+}
+
+.cta {
+  margin-top: 60px;
+}
+
+.cta-icon {
+  margin-left: 10px;
 }
 
 @media screen and (max-width: 768px) {
