--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,9 +1,10 @@
 /* FILEPATH: /Users/nicholasoliveira/Projects/portfolio-website/components/Footer/Footer.module.css */
 
 .footer {
-  background-color: var(--color-primary);
+  background-color: var(--color-base-pewter);
   padding: 20px;
   text-align: center;
+  border-top: 0.8px solid var(--color-primary);
 }
 
 .footer-content {
@@ -14,7 +15,7 @@
 }
 
 .footer-text {
-  color: var(--color-base-pewter);
+  color: var(--color-primary);
   text-decoration: none;
 }
 
@@ -23,5 +24,5 @@
 }
 
 .footer-name {
-  color: var(--color-base-white);
+  color: var(--color-base-black);
 }
