--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -8,7 +8,7 @@
 .footer-content {
   margin: 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -23,4 +23,29 @@
 
 .footer-name {
   color: var(--color-primary);
+}
+
+.footer-social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-email {
+  margin: 0 4px;
+}
+
+.social-icon {
+  margin: 0 8px;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-content {
+    flex-direction: column;
+  }
+
+  .footer-social {
+    margin-top: 10px;
+  }
 }
