fix: set up is active property for projects and buttons

--- a/components/shared/Button/Button.module.css
+++ b/components/shared/Button/Button.module.css
@@ -21,3 +21,10 @@
   background: var(--color-base-black);
   color: var(--color-base-pewter);
 }
+
+.disabled {
+  background: var(--color-disabled);
+  color: var(--color-base-white);
+  cursor: not-allowed;
+  pointer-events: none;
+}
