--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -13,20 +13,30 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  max-width: 60rem;
+  max-width: 48rem;
 }
 
 .intro-name {
   font-size: 3rem;
   font-weight: 700;
   font-family: var(--font-work-sans);
-  line-height: 1.2;
-  margin-bottom: 1rem;
+  line-height: 0.8;
+  /* margin-bottom: 1rem; */
   color: var(--color-primary);
+}
+
+.intro-paragraph {
+  font-size: 1.2rem;
+  font-weight: 500;
+  line-height: 1.2;
+  margin: 1rem 0;
 }
 
 @media screen and (max-width: 768px) {
   .intro-name {
     font-size: 2rem;
+  }
+  .intro-paragraph {
+    font-size: 1rem;
   }
 }
