style: change dot indicator color

--- a/components/Portfolio/Portfolio.module.css
+++ b/components/Portfolio/Portfolio.module.css
@@ -91,9 +91,10 @@
 }
 
 .dot {
-  background-color: black;
+  background-color: var(--color-primary);
   width: 15px;
   height: 15px;
+  border: 2px solid var(--color-base-pewter);
   border-radius: 50%;
 }
 
