--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -42,9 +42,13 @@
   margin: 1rem;
   border: 1px solid var(--color-primary);
   border-radius: 4px;
-  padding: 10px;
+  padding: 12px;
   background-color: var(--color-primary);
   color: var(--color-base-pewter);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--font-dm-sans), "Roboto", sans-serif;
 }
 
 .submit:hover {
