--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .about-content {
