--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -1,5 +1,5 @@
 #intro {
-  height: calc(100vh - 5rem);
+  /* height: calc(100vh - 5rem); */
   margin: 0 auto;
   overflow: hidden;
   display: flex;
