--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -1,10 +1,11 @@
 #intro {
-  /* height: calc(100vh - 5rem); */
+  height: calc(100vh - 5rem);
   margin: 0 auto;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 480px;
 }
 
 .intro-content {
