--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -15,14 +15,17 @@
 .footer-text {
   color: var(--color-base-black);
   text-decoration: none;
+  margin-left: 24px;
+  text-align: start;
+  align-items: center;
 }
 
 /* .footer-text:hover {
   text-decoration: underline;
 } */
 
-.footer-name {
-  color: var(--color-primary);
+.footer-span {
+  margin-top: 4px;
 }
 
 .footer-email {
@@ -37,5 +40,9 @@
 @media screen and (max-width: 768px) {
   .footer-content {
     flex-direction: column;
+  }
+  .footer-text {
+    margin: 8px 0;
+    text-align: center;
   }
 }
