--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -10,7 +10,7 @@
 
 .about-content {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   text-align: center;
   max-width: 60rem;
