--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -28,8 +28,7 @@
 .intro-paragraph {
   font-size: 1.2rem;
   font-weight: 500;
-  line-height: 1.2;
-  margin: 1rem 0;
+  margin: 12px 0 20px 0;
 }
 
 @media screen and (max-width: 768px) {
