--- a/components/Portfolio/Portfolio.module.css
+++ b/components/Portfolio/Portfolio.module.css
@@ -5,8 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  min-height: 600px;
+  padding: 100px 0;
 }
 
 .portfolio-heading {
@@ -104,6 +103,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  #portfolio {
+    padding: 80px 0;
+  }
   .project-container {
     width: 300px;
   }
