--- a/components/Skills/Skills.module.css
+++ b/components/Skills/Skills.module.css
@@ -1,19 +1,16 @@
 #skills {
   background-color: var(--color-primary);
   overflow: hidden;
-  width: 100vw;
-  /* max-width: 50rem; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  padding: 60px 0;
+  padding: 100px 0;
 }
 
-.skills-title {
+.skills-heading {
   color: var(--color-base-pewter);
-  margin-bottom: 20px;
 }
 
 .skills-container {
@@ -46,6 +43,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  #skills {
+    padding: 80px 0;
+  }
   .skills-container {
     flex-direction: column;
   }
