--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 240px 20px;
+  padding: 300px 20px 240px 20px;
 }
 
 .intro-content {
@@ -32,7 +32,7 @@
 
 @media screen and (max-width: 768px) {
   #intro {
-    padding: 140px 20px;
+    padding: 200px 20px 140px 20px;
   }
   .intro-name {
     font-size: 2rem;
