--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -2,8 +2,8 @@
   margin: 0 auto;
   overflow: hidden;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   padding: 300px 20px 240px 20px;
 }
 
@@ -13,21 +13,19 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  max-width: 48rem;
+  max-width: 40rem;
+}
+
+.intro-greeting {
+  font-size: 2rem;
 }
 
 .intro-name {
-  font-size: 3rem;
-  font-weight: 700;
-  font-family: var(--font-work-sans);
-  line-height: 0;
-  color: var(--color-primary);
+  font-size: 5rem;
 }
 
-.intro-paragraph {
-  font-size: 1.2rem;
-  font-weight: 500;
-  margin: 12px 0 20px 0;
+.intro-title {
+  font-size: 3rem;
 }
 
 @media screen and (max-width: 768px) {
