--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,18 +19,18 @@
   font-weight: 400;
   line-height: 1.5;
   text-decoration: none;
-  /* color: #333; */
-}
-
-body {
-  background-color: var(--color-secondary);
-  overflow: hidden;
-  overflow-y: scroll;
 }
 
 html {
   font-family: var(--font-dm-sans), 'Roboto', sans-serif;
   scroll-behavior: smooth !important;
+}
+
+body {
+  background-color: var(--color-primary);
+  overflow: hidden;
+  overflow-y: scroll;
+  color: var(--color-neutral-light);
 }
 
 h1 {
@@ -43,10 +43,10 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1.2;
   margin-bottom: 1rem;
-  color: var(--color-primary);
+  color: var(--color-secondary);
 }
 
 h3 {
@@ -54,6 +54,7 @@ h3 {
   font-weight: 500;
   line-height: 1.2;
   margin-bottom: 1rem;
+  color: var(--color-secondary);
 }
 
 h4 {
