--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 300px 20px 240px 20px;
+  background: linear-gradient(180deg, #100d1e 88%, #1f1a38 100%);
+  height: 100vh;
 }
 
 .intro-content {
@@ -32,10 +33,13 @@
   #intro {
     padding: 200px 20px 140px 20px;
   }
-  .intro-name {
-    font-size: 2rem;
+  .intro-greeting {
+    font-size: 1.5rem;
   }
-  .intro-paragraph {
-    font-size: 1rem;
+  .intro-name {
+    font-size: 3rem;
+  }
+  .intro-title {
+    font-size: 2rem;
   }
 }
