--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -29,6 +29,13 @@
   font-size: 3rem;
 }
 
+.button-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
 @media screen and (max-width: 768px) {
   #intro {
     padding: 200px 20px 140px 20px;
