--- a/components/shared/Button/Button.module.css
+++ b/components/shared/Button/Button.module.css
@@ -1,6 +1,4 @@
 .btn {
-  background: var(--color-primary);
-  color: var(--color-base-pewter);
   padding: 0.5rem 1rem;
   margin: 0 1rem;
   cursor: pointer;
@@ -9,7 +7,7 @@
   justify-content: center;
   border: none;
   border-radius: 4px;
-  font-family: var(--font-dm-sans), "Roboto", sans-serif;
+  font-family: var(--font-dm-sans), 'Roboto', sans-serif;
   transition: background 0.2s ease-out;
 }
 
@@ -19,7 +17,7 @@
 
 .btn:hover {
   background: var(--color-base-black);
-  color: var(--color-base-pewter);
+  color: var(--color-secondary);
 }
 
 .disabled {
@@ -27,4 +25,15 @@
   color: var(--color-base-white);
   cursor: not-allowed;
   pointer-events: none;
+}
+
+.primary {
+  background: var(--color-secondary);
+  color: var(--color-primary);
+}
+
+.secondary {
+  background: var(--color-neutral-dark);
+  color: var(--color-secondary);
+  border: 2px solid var(--color-secondary);
 }
