--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -4,7 +4,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 auto;
   padding: 1rem 2rem;
   z-index: 3;
   background-color: var(--color-base-pewter);
@@ -29,10 +28,11 @@
   justify-content: center;
   align-items: center;
   list-style: none;
+  margin-right: 1.5rem;
 }
 
 .nav-link {
-  margin: 1.2rem;
+  margin: 0 1.5rem;
 }
 
 .hamburger {
@@ -76,6 +76,7 @@
 
   .nav-links ul {
     flex-direction: column;
+    margin: 0 auto;
   }
 
   .nav-links li {
