--- a/components/shared/Button/Button.module.css
+++ b/components/shared/Button/Button.module.css
@@ -6,18 +6,13 @@
   align-items: center;
   justify-content: center;
   border: none;
-  border-radius: 4px;
+  border-radius: 8px;
   font-family: var(--font-dm-sans), 'Roboto', sans-serif;
   transition: background 0.2s ease-out;
 }
 
 .btn-icon {
   margin-right: 8px;
-}
-
-.btn:hover {
-  background: var(--color-base-black);
-  color: var(--color-secondary);
 }
 
 .disabled {
@@ -32,8 +27,18 @@
   color: var(--color-primary);
 }
 
-.secondary {
-  background: var(--color-neutral-dark);
+.primary:hover {
+  background: var(--color-primary);
   color: var(--color-secondary);
-  border: 2px solid var(--color-secondary);
+}
+
+.secondary {
+  background: var(--color-primary);
+  color: var(--color-secondary);
+  border: 1px solid var(--color-secondary);
+}
+
+.secondary:hover {
+  background: var(--color-secondary);
+  color: var(--color-primary);
 }
