--- a/components/shared/Button/Button.module.css
+++ b/components/shared/Button/Button.module.css
@@ -8,7 +8,7 @@
   border: none;
   border-radius: 8px;
   font-family: var(--font-dm-sans), 'Roboto', sans-serif;
-  transition: background 0.2s ease-out;
+  transition: background 0.2s ease-out, border-color 0.2s ease-out;
 }
 
 .btn-icon {
@@ -25,11 +25,7 @@
 .primary {
   background: var(--color-secondary);
   color: var(--color-primary);
-}
-
-.primary:hover {
-  background: var(--color-primary);
-  color: var(--color-secondary);
+  border: 1px solid var(--color-primary);
 }
 
 .secondary {
@@ -38,7 +34,15 @@
   border: 1px solid var(--color-secondary);
 }
 
+.primary:hover,
 .secondary:hover {
-  background: var(--color-secondary);
+  background: var(--color-accent);
   color: var(--color-primary);
+  border: 1px solid var(--color-accent);
 }
+
+/* .secondary:hover {
+  background: var(--color-secondary);
+  color: var(--color-accent);
+  border: 1px solid var(--color-accent);
+} */
