--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,14 +15,15 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  text-decoration: none;
 }
 
 html {
-  font-family: var(--font-dm-sans), 'Roboto', sans-serif;
+  font-family: var(--font-work-sans), 'Roboto', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-decoration: none;
+  color: var(--color-neutral-light);
   scroll-behavior: smooth !important;
 }
 
@@ -30,55 +31,46 @@ body {
   background-color: var(--color-primary);
   overflow: hidden;
   overflow-y: scroll;
-  color: var(--color-neutral-light);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin-bottom: 1rem;
+  font-weight: 500;
+  line-height: 1.2;
 }
 
 h1 {
   font-size: 3rem;
   font-weight: 700;
   font-family: var(--font-work-sans);
-  line-height: 1.2;
-  margin-bottom: 1rem;
 }
 
-h2 {
-  font-size: 2rem;
-  font-weight: 500;
-  line-height: 1.2;
-  margin-bottom: 1rem;
-  color: var(--color-secondary);
-}
-
-h3 {
-  font-size: 1.5rem;
-  font-weight: 500;
-  line-height: 1.2;
-  margin-bottom: 1rem;
-  color: var(--color-secondary);
-}
-
+h2,
 h4 {
-  font-size: 1rem;
-  font-weight: 500;
-  line-height: 1.2;
-  margin-bottom: 0.5rem;
+  font-size: 2rem;
+}
+
+h3,
+h5 {
+  font-size: 1.5rem;
+}
+
+h4,
+h5 {
+  color: var(--color-secondary);
 }
 
 p {
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  max-width: 40rem;
-}
-
-p span {
-  font-size: 1rem;
-  font-weight: 400;
-  margin-bottom: 1rem;
+  font-family: var(--font-dm-sans), 'Roboto', sans-serif;
   max-width: 40rem;
 }
 
 a {
+  text-decoration: none;
   color: var(--color-neutral-light);
   transition: color 0.2s ease-out;
 }
@@ -88,29 +80,33 @@ a:hover {
 }
 
 @media screen and (max-width: 768px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    margin-bottom: 0.8rem;
+  }
+
   h1 {
     font-size: 2rem;
-    margin-bottom: 0.8rem;
   }
-  h2 {
-    font-size: 1.5rem;
-    margin-bottom: 0.8rem;
-  }
-  h3 {
-    font-size: 1.25rem;
-    margin-bottom: 0.8rem;
-  }
+
+  h2,
   h4 {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
+
+  h3,
+  h5 {
+    font-size: 1.25rem;
+  }
+
   p {
     font-size: 1rem;
     max-width: 24rem;
   }
-  p span {
-    font-size: 1rem;
-    max-width: 24rem;
-  }
+
   p a {
     font-size: 1rem;
   }
