--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -5,6 +5,11 @@
   justify-content: center;
   margin: 0 auto;
   padding: 280px 20px 300px 20px;
+  background: linear-gradient(
+    180deg,
+    var(--color-neutral-dark) 0%,
+    var(--color-primary) 10.26%
+  );
 }
 
 .about-content {
