--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -1,8 +1,8 @@
-#about {
+.about {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 5rem;
   margin: 0 auto;
   padding: 280px 20px 300px 20px;
   background: linear-gradient(
@@ -14,16 +14,16 @@
 
 .about-content {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: start;
   justify-content: center;
-  text-align: center;
-  max-width: 60rem;
+  max-width: 40ch;
   padding: 0 20px;
 }
 
-.about-paragraph {
+/* .about-paragraph {
   padding: 0 40px;
-}
+} */
 
 .cta {
   margin-top: 60px;
