--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -12,7 +12,7 @@
   );
 }
 
-.about-content {
+.about-content-container {
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -21,17 +21,13 @@
   padding: 0 20px;
 }
 
+.about-image {
+  border-radius: 0 0 16px 16px;
+}
+
 /* .about-paragraph {
   padding: 0 40px;
 } */
-
-.cta {
-  margin-top: 60px;
-}
-
-.cta-icon {
-  margin-left: 10px;
-}
 
 @media screen and (max-width: 768px) {
   #about {
