--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -33,7 +33,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 2rem;
+  gap: 1.5rem;
 }
 
 @media screen and (max-width: 768px) {
