feat: add images for tools, fix layout
Added ToolsRow component to About section.
Added images for tools.
Fixed layout for items in ToolsRow.

--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -1,5 +1,6 @@
 .about {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 5rem;
@@ -12,10 +13,17 @@
   );
 }
 
+.about-me-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
 .about-content-container {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
   max-width: 40ch;
   padding: 0 20px;
@@ -28,6 +36,24 @@
 /* .about-paragraph {
   padding: 0 40px;
 } */
+
+.tools {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 1rem;
+  min-width: 60vw;
+}
+
+.tool-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tool-image {
+  object-fit: contain;
+}
 
 @media screen and (max-width: 768px) {
   #about {
