--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -54,12 +54,23 @@
 
 .tool-item {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .tool-image {
   object-fit: contain;
+}
+
+.tool-name {
+  margin-top: 1rem;
+  color: var(--color-primary);
+  font-weight: 700;
+}
+
+.tool-item:hover .tool-name {
+  color: var(--color-secondary);
 }
 
 @media screen and (max-width: 768px) {
