style: update styles for form Button
Update styles for form button.
Change disabled button text color.
Add new color variable for disabled button text.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@
   --color-base-white: #ffffff;
   --color-error: #dc143c;
   --color-disabled: rgb(140, 140, 140, 0.5);
+  --color-disabled-text: rgb(140, 140, 140, 0.8);
 }
 
 * {
