--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -24,7 +24,7 @@
   border: 1px solid var(--color-base-pewter);
   border-radius: 4px;
   padding: 10px;
-  font-family: var(--font-dm-sans), "Roboto", sans-serif;
+  font-family: var(--font-dm-sans), 'Roboto', sans-serif;
 }
 
 .contact-form-field:active {
@@ -40,28 +40,29 @@
 .submit {
   width: 100%;
   margin: 1rem;
-  border: 1px solid var(--color-primary);
-  border-radius: 4px;
+  border: 1px solid var(--color-secondary);
+  border-radius: 8px;
   padding: 12px;
-  background-color: var(--color-primary);
-  color: var(--color-base-pewter);
+  background-color: var(--color-secondary);
+  color: var(--color-primary);
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: var(--font-dm-sans), "Roboto", sans-serif;
+  font-family: var(--font-dm-sans), 'Roboto', sans-serif;
+  font-weight: 700;
 }
 
 .submit:hover {
-  background-color: var(--color-base-black);
-  color: var(--color-base-pewter);
-  border: 1px solid var(--color-base-black);
+  background-color: var(--color-accent);
+  color: var(--color-primary);
+  border: 1px solid var(--color-accent);
   cursor: pointer;
 }
 
 .submit:disabled {
-  background-color: var(--color-base-pewter);
-  color: var(--color-primary);
-  border: 1px solid var(--color-primary);
+  background-color: var(--color-disabled);
+  color: var(--color-disabled-text);
+  border: 1px solid var(--color-disabled);
   cursor: default;
 }
 
