--- a/components/shared/Button/Button.module.css
+++ b/components/shared/Button/Button.module.css
@@ -17,7 +17,7 @@
 
 .disabled {
   background: var(--color-disabled);
-  color: var(--color-base-white);
+  color: var(--color-disabled-text);
   cursor: not-allowed;
   pointer-events: none;
 }
