--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -39,7 +39,8 @@
 
 .submit {
   width: 100%;
-  margin: 1rem;
+  height: 60px;
+  margin: 1rem 0;
   border: 1px solid var(--color-secondary);
   border-radius: 8px;
   padding: 12px;
