style: adjust footer styles
Change font color for footer elements.
Refactor classes and layout.
Swap order of copyright and email.
Add icon for email.

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -12,25 +12,34 @@
   align-items: center;
 }
 
-.footer-text {
-  color: var(--color-base-black);
+.footer-text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.footer-text,
+.footer-email {
+  color: var(--color-neutral-light);
   text-decoration: none;
   margin-left: 16px;
   text-align: start;
   align-items: center;
 }
 
-/* .footer-text:hover {
-  text-decoration: underline;
-} */
-
-.footer-span {
-  margin-top: 4px;
+.footer-email {
+  display: flex;
+  align-items: center;
 }
 
-/* .footer-email {
-  margin: 0 4px;
-} */
+.footer-email:hover {
+  color: var(--color-accent);
+}
+
+.email-icon {
+  margin-right: 8px;
+  padding: 0;
+}
 
 .social-icon {
   margin: 0 8px;
