--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -66,7 +66,7 @@
 .tool-name {
   margin-top: 1rem;
   color: var(--color-primary);
-  font-weight: 700;
+  font-weight: var(--fw-b);
 }
 
 .tool-item:hover .tool-name {
