--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -45,11 +45,12 @@
 /* ToolsRow styles */
 
 .tools {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  place-content: center;
+  gap: min(4vw, 1.5rem); /* min(4vw, 1.5rem) */
   margin-top: 1rem;
-  min-width: 55vw;
+  max-width: 60vw;
 }
 
 .tool-item {
@@ -73,15 +74,32 @@
   color: var(--color-secondary);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   #about {
     padding: 80px 20px 132px 20px;
   }
+
+  .about-me-content {
+    flex-direction: column-reverse;
+  }
+
+  .about-content-container {
+    align-items: center;
+    text-align: center;
+  }
+
+  .tools {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
   .about-content {
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
+
   .about-paragraph {
     padding: 0;
     margin-top: 20px;
