--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -31,8 +31,15 @@
   padding: 0 20px;
 }
 
+.about-image-container {
+  position: relative;
+  width: 300px;
+  height: 300px;
+}
+
 .about-image {
   border-radius: 0 0 16px 16px;
+  object-fit: contain;
 }
 
 .tools-section {
@@ -48,7 +55,6 @@
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   place-content: center;
-  gap: min(4vw, 1.5rem); /* min(4vw, 1.5rem) */
   margin-top: 1rem;
   max-width: 60vw;
 }
@@ -57,7 +63,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
+  margin: 0 8px;
+  width: 100px;
+  height: 160px;
+}
+
+.tool-image-container {
+  display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .tool-image {
@@ -65,7 +80,6 @@
 }
 
 .tool-name {
-  margin-top: 1rem;
   color: var(--color-primary);
   font-weight: var(--fw-b);
 }
@@ -74,7 +88,7 @@
   color: var(--color-secondary);
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
   #about {
     padding: 80px 20px 132px 20px;
   }
@@ -86,6 +100,12 @@
   .about-content-container {
     align-items: center;
     text-align: center;
+    max-width: 50ch;
+  }
+
+  .about-image-container {
+    width: 240px;
+    height: 240px;
   }
 
   .tools {
