--- a/components/Portfolio/Portfolio.module.css
+++ b/components/Portfolio/Portfolio.module.css
@@ -161,18 +161,27 @@
     width: 300px;
   }
 
+  .project-image-container {
+    min-width: 400px;
+    height: 240px;
+  }
+
   .project-image {
-    width: 300px;
-    height: 300px;
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .current-project {
+    gap: 0.5rem;
   }
 
-  .client-logo-wrapper {
-    width: 120px;
-    height: 120px;
+  .project-image-container {
+    min-width: 320px;
+    height: 200px;
   }
 
-  .client-logo {
-    width: 120px;
-    height: 120px;
+  .project-image {
+    width: 320px;
   }
 }
