--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -1,13 +1,12 @@
 /* About styles */
 
 .about {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 8rem;
-  margin: 0 auto;
-  padding: 280px 20px 300px 20px;
   background: linear-gradient(
     180deg,
     var(--color-neutral-dark) 0%,
@@ -89,8 +88,8 @@
 }
 
 @media screen and (max-width: 1200px) {
-  #about {
-    padding: 80px 20px 132px 20px;
+  .about {
+    padding-top: 240px;
   }
 
   .about-me-content {
