--- a/components/Portfolio/Portfolio.module.css
+++ b/components/Portfolio/Portfolio.module.css
@@ -1,11 +1,9 @@
 .portfolio {
   background-color: var(--color-primary);
-  padding: 60px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 100px 0;
 }
 
 .portfolio-heading {
@@ -129,10 +127,6 @@
 }
 
 @media screen and (max-width: 1200px) {
-  #portfolio {
-    padding: 80px 0;
-  }
-
   .current-project {
     flex-direction: column;
     gap: 1.25rem;
@@ -149,6 +143,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .portfolio {
+    padding: 40px 0;
+  }
+
   .project-container {
     width: 300px;
   }
