--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,13 +69,13 @@ html {
 }
 
 body {
-  background-color: var(--color-primary);
+  background-color: var(--color-neutral-dark);
   overflow: hidden;
   overflow-y: scroll;
 }
 
 section {
-  padding: 224px 20px;
+  padding: 240px 20px;
 }
 
 h1,
@@ -129,7 +129,7 @@ a:hover {
 
 @media screen and (max-width: 768px) {
   section {
-    padding: 160px 16px;
+    padding: 200px 16px;
   }
 
   h1,
