feat: add paragraph to contact section
Added paragraph with link to send me an email.
Changed links and IDs to link to contact section.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,10 +111,11 @@ h5 {
 p,
 a {
   font-family: var(--ff-secondary);
+  max-width: 40ch;
 }
 
-p {
-  max-width: 40rem;
+p a {
+  text-decoration: underline;
 }
 
 a {
