--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -4,6 +4,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
+}
+
+.contact p {
+  margin: 8px 0;
 }
 
 .contact-form-wrapper {
