chore: add new logo

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -14,9 +14,9 @@
 }
 
 .logo {
-  object-fit: cover;
-  width: 5rem;
-  height: 4rem;
+  object-fit: contain;
+  width: 3rem;
+  height: 3rem;
 }
 
 .nav-links {
